--- a/components/Places/Places.module.scss
+++ b/components/Places/Places.module.scss
@@ -4,6 +4,7 @@
 .places {
   margin: 40rem auto auto auto;
   padding: 10rem;
+  overflow: hidden;
   background-image: linear-gradient(to right bottom, #f2f2f2, #9c9c9c);
 
   @include respond(tab-port) {
@@ -16,6 +17,7 @@
   }
 
   &__content {
+    overflow: hidden;
     padding: 3rem;
 
     @include respond(tab-port) {
@@ -62,6 +64,8 @@
   &__row {
     display: flex;
     justify-content: space-around;
+    border-radius: 5rem;
+    overflow: hidden;
 
     &:not(:last-child) {
       margin-bottom: 3rem;
